| Summary: | ASTERISK-28006: PJSIP: Missing "party=calling"/"party=called" in Remote-Party-ID | ||||
| Reporter: | Eric Dantie (edantie) | Labels: | pjsip | ||
| Date Opened: | 2018-08-08 15:53:28 | Date Closed: | 2018-08-15 08:30:33 | ||
| Priority: | Minor | Regression? | No | ||
| Status: | Closed/Complete | Components: | Resources/res_pjsip_caller_id | ||
| Versions: | 13.22.0 15.5.0 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | I'm changing from sip to pjsip. But Remote-Party-ID is not generated correctly in PJSIP:
Remote-Party-ID: ":999999999" <sip:666666666@192.168.114.238>;privacy=off;screen=no When generated by SIP channel: Remote-Party-ID: ":999999999" <sip:666666666@192.168.114.238>;party=calling;privacy=off;screen=no The missing "party=calling" is important for some PBX vendors like 3CX. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2018-08-08 15:53:30.815-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2018-08-15 08:30:34.491-0500 Change 9862 merged by George Joseph: res_pjsip_caller_id: Add "party" parameter to RPID header. [https://gerrit.asterisk.org/9862|https://gerrit.asterisk.org/9862] By: Friendly Automation (friendly-automation) 2018-08-15 08:58:36.928-0500 Change 9864 merged by Jenkins2: res_pjsip_caller_id: Add "party" parameter to RPID header. [https://gerrit.asterisk.org/9864|https://gerrit.asterisk.org/9864] By: Friendly Automation (friendly-automation) 2018-08-15 09:45:59.970-0500 Change 9863 merged by George Joseph: res_pjsip_caller_id: Add "party" parameter to RPID header. [https://gerrit.asterisk.org/9863|https://gerrit.asterisk.org/9863] By: Friendly Automation (friendly-automation) 2018-08-15 09:46:13.719-0500 Change 9865 merged by George Joseph: res_pjsip_caller_id: Add "party" parameter to RPID header. [https://gerrit.asterisk.org/9865|https://gerrit.asterisk.org/9865] | ||||